[FIX] layout: Stop middle columns overlapping by using display:table
git-svn-id: https://svn.code.sf.net/p/tikiwiki/code/trunk@32017 b456876b-0849-0410-b77d-98878d47e9d5

--- a/styles/layout/layout.css
+++ b/styles/layout/layout.css
@@ -27,9 +27,14 @@ header, nav, article, footer, address {
     display: block;  
 } 
 
+/* lite.css needs the centre section to be
+ * display:table to avoid overlapping columns */
+#middle {
+	display: table;
+}
+
 /* general .fixedwidth wrapper when fixed width is off */
 .fixedwidth {
-	display: table;
 	margin: 0 auto;
 	width: 100%;
 }
